<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut android:shortcutId="add_task" android:enabled="true" android:icon="@drawable/ic_add" android:shortcutShortLabel="@string/shortcut_add_task"><intent android:action="com.si13.app.ADD_TASK" android:targetPackage="com.si13.app" android:targetClass="com.si13.app.SplashActivity" /></shortcut>
    <shortcut android:shortcutId="today_tasks" android:enabled="true" android:icon="@drawable/ic_calendar" android:shortcutShortLabel="@string/shortcut_today"><intent android:action="com.si13.app.TODAY_TASKS" android:targetPackage="com.si13.app" android:targetClass="com.si13.app.SplashActivity" /></shortcut>
    <shortcut android:shortcutId="voice_task" android:enabled="true" android:icon="@drawable/ic_mic" android:shortcutShortLabel="@string/shortcut_voice"><intent android:action="com.si13.app.VOICE_TASK" android:targetPackage="com.si13.app" android:targetClass="com.si13.app.SplashActivity" /></shortcut>
    <shortcut android:shortcutId="search_tasks" android:enabled="true" android:icon="@drawable/ic_search" android:shortcutShortLabel="@string/shortcut_search"><intent android:action="com.si13.app.SEARCH_TASKS" android:targetPackage="com.si13.app" android:targetClass="com.si13.app.SplashActivity" /></shortcut>
</shortcuts>
